# Snake

./: CMakeLists.txt  Main.cpp  README.md  imgui.ini
include/: Map.hpp  ResourceManager.hpp  Snake.hpp
src/: Map.cpp  ResourceManager.cpp  Snake.cpp
